<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/bing_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/weather_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/weather_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/weather_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical">

                    <!--标题-->
                    <RelativeLayout
                        android:id="@+id/weather_title"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize">

                        <Button
                            android:id="@+id/nav_choose_area_button"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:background="@mipmap/ic_location" />

                        <TextView
                            android:id="@+id/title_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textColor="#FFF"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/title_update_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:textColor="#FFF"
                            android:textSize="26sp" />
                    </RelativeLayout>

                    <!--当前时间天气状况-->
                    <LinearLayout
                        android:id="@+id/weather_now"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:orientation="vertical"
                        android:textColor="#FFF">

                        <TextView
                            android:id="@+id/weather_cur_degree_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#FFF"
                            android:textSize="60sp" />

                        <TextView
                            android:id="@+id/weather_cur_info_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#FFF"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <!--天气预报-->
                    <LinearLayout
                        android:id="@+id/weather_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="#8000"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/weather_forecast"
                            android:textColor="#FFF"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="2"
                                android:text="日期"
                                android:textColor="#FFF" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="天气"
                                android:textColor="#FFF" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="最高温度"
                                android:textColor="#FFF" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="最低温度"
                                android:textColor="#FFF" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/weather_forecast_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />

                    </LinearLayout>

                    <!--空气质量-->
                    <LinearLayout
                        android:id="@+id/weather_aqi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="#8000"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/weather_aqi"
                            android:textColor="#FFF"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp">

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/weather_aqi_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="#FFF"
                                        android:textSize="40sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/weather_aqi_index"
                                        android:textColor="#FFF" />

                                </LinearLayout>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/weather_pm25_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="#FFF"
                                        android:textSize="40sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/weather_aqi_pm2.5"
                                        android:textColor="#FFF" />
                                </LinearLayout>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/weather_qlty_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="#FFF"
                                        android:textSize="40sp" />
                                    <!--
                                                                <TextView
                                                                    android:layout_width="wrap_content"
                                                                    android:layout_height="wrap_content"
                                                                    android:layout_gravity="center"
                                                                    android:text="@string/weather_aqi_qlty"
                                                                    android:textColor="#FFF" />-->
                                </LinearLayout>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <!--生活建议-->
                    <LinearLayout
                        android:id="@+id/weather_suggestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="#8000"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/weather_suggestion"
                            android:textColor="#FFF"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/weather_suggestion_comf_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:textColor="#FFF" />

                        <TextView
                            android:id="@+id/weather_suggestion_cw_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:textColor="#FFF" />

                        <TextView
                            android:id="@+id/weather_suggestion_drsg_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:textColor="#FFF" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>


        </android.support.v4.widget.SwipeRefreshLayout>


        <fragment
            android:id="@+id/choose_area_fragment"
            android:name="com.hq.crystalworld.weather.ChooseAreaFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            tools:layout="@layout/choose_area_fragment" />

        <fragment
            android:id="@+id/choose_location_fragment"
            android:name="com.hq.crystalworld.weather.LocationFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            tools:layout="@layout/location_fragment" />

    </android.support.v4.widget.DrawerLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@mipmap/bar"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_location_button"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@mipmap/n32" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

  <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/pot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/pot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/pot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/pot" />
    </LinearLayout>-->
</FrameLayout>